--- a/.github/workflows/daily_shorts.yml
+++ b/.github/workflows/daily_shorts.yml
@@ -3,7 +3,7 @@ name: Daily Shorts Automation
 on:
   schedule:
     # Runs at 09:00, 15:00, 21:00 UTC (Adjust to your timezone)
-    - cron: '0 6,7,8,13,14,18 * * *'
+    - cron: '*/30 * * * *'
   workflow_dispatch:  # Allows manual run from GitHub interface
 
 jobs:
