--- a/.github/workflows/movies_shorts.yml
+++ b/.github/workflows/movies_shorts.yml
@@ -2,8 +2,8 @@ name: Movies Shorts Automation
 
 on:
   schedule:
-    # Runs every 15 minutes
-    - cron: '*/15 * * * *'
+    # Runs every 15 minutes (offset to avoid peak congestion at :00, :15, :30, :45)
+    - cron: '7,22,37,52 * * * *'
   workflow_dispatch:  # Allows manual run from GitHub interface
 
 jobs:
